sysdigcloud/api-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sysdigcloud-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sysdigcloud
        role: api
    spec:
      containers:
        - name: nginx
          image: quay.io/sysdig/sysdigcloud-backend:1985-nginx
          volumeMounts:
            - name: ssl
              mountPath: /opt/certs/
            - name: config
              mountPath: /opt/kubernets_config
        - name: api
          image: quay.io/sysdig/sysdigcloud-backend:1985-allinone-java
          volumeMounts:
            - name: config
              mountPath: /opt/kubernets_config
            # Uncomment this if you need to import self-signed SSL certs
            #- name: java-certs
            #  mountPath: /opt/java-certs/
            # Uncomment this if you want to split sysdgicloud configurations into configs and secrets.
            #- name: secrets
            #  mountPath: /opt/kubernets_secrets
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 2
          lifecycle:
            preStop:
              exec:
                command: ["curl","-v","http://127.0.0.1:9000/api/admin/drain"]
          # resources:
          #   limits:
          #     cpu: "8"
          #     memory: "8Gi"
          #   requests:
          #     cpu: "2"
          #     memory: "4Gi"
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      volumes:
        - name: config
          configMap:
            name: sysdigcloud-config
        - name: ssl
          secret:
            secretName: sysdigcloud-ssl-secret
        # Uncomment this if you need to import self-signed SSL certs
        #- name: java-certs
        #  secret:
        #    secretName: sysdigcloud-java-certs
        # Uncomment this if you want to split sysdgicloud configurations into configs and secrets.
        #- name: secrets
        #  secret:
        #    secretName: <secret_name>
