sysdigcloud/sdc-fastpath-aggregator.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sysdigcloud-fastpath-aggregator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sysdigcloud
        role: fastpathAggregator
    spec:
      containers:
        - name: fastpath-aggregator
          image: quay.io/sysdig/sysdigcloud-backend:1212
          volumeMounts:
            - name: logs
              mountPath: /var/log/sysdigcloud
            - name: config
              mountPath: /opt/kubernets_config
            - name: ssl
              mountPath: /opt/certs/
            # Uncomment this if you need to import self-signed SSL certs
            #- name: java-certs
            #  mountPath: /opt/java-certs/
            # Uncomment this if you want to split sysdgicloud configurations into configs and secrets.
            #- name: secrets
            #  mountPath: /opt/kubernets_secrets
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 2
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      volumes:
        - name: logs
        - name: config
          configMap:
            name: sysdigcloud-config
        - name: ssl
          secret:
            secretName: sysdigcloud-ssl-secret
        # Uncomment this if you need to import self-signed SSL certs
        #- name: java-certs
        #  secret:
        #    secretName: sysdigcloud-java-certs
        # Uncomment this if you want to split sysdgicloud configurations into configs and secrets.
        #- name: secrets
        #  secret:
        #    secretName: <secret_name>
