sysdigcloud/worker-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sysdigcloud-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sysdigcloud
        role: worker
    spec:
      containers:
        - name: email-renderer
          image: quay.io/sysdig/sysdigcloud-backend:1970-email-renderer
        - name: worker
          image: quay.io/sysdig/sysdigcloud-backend:1970-allinone-java
          volumeMounts:
            - name: logs
              mountPath: /var/log/sysdigcloud
            - name: config
              mountPath: /opt/kubernets_config
            # Uncomment this if you need to import self-signed SSL certs
            #- name: java-certs
            #  mountPath: /opt/java-certs/
            # Uncomment this if you want to split sysdgicloud configurations into configs and secrets.
            #- name: secrets
            #  mountPath: /opt/kubernets_secrets
            #- name: es-certs
            #  mountPath: /opt/kubernets-secrets/elasticsearch-certs/
            #- name: es-password
            #  mountPath: /opt/kubernets-secrets/elasticsearch.password
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 2
          lifecycle:
            preStop:
              exec:
                command: ["curl","-v","http://127.0.0.1:9000/api/admin/drain"]
          resources:
            limits:
              cpu: "8"
              memory: "8Gi"
            requests:
              cpu: "2"
              memory: "4Gi"
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: sysdigcloud-pull-secret
      volumes:
        - name: logs
        - name: config
          configMap:
            name: sysdigcloud-config
        #- name: es-certs
        #  secret:
          #  secretName: ca-certs
          #  defaultMode: 256
        #- name: es-password
        #  secret:
          #  secretName: sg-admin-secret
        # Uncomment this if you need to import self-signed SSL certs, wich can be created with
        # kubectl create secret generic example-cert --from-file=${HOME}/cert.pem
        #- name: java-certs
        #  secret:
        #    secretName: sysdigcloud-java-certs
        # Uncomment this if you want to split sysdgicloud configurations into configs and secrets.
        #- name: secrets
        #  secret:
        #    secretName: <secret_name>
